syntax = "proto3";

package de.unistuttgart.isw.sfsc.patterns.reqrep;

option java_multiple_files = true;

message RequestReplyMessage {
  int32 message_id = 1;
  bytes response_topic = 2;
  bytes payload = 3;
}

